[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diracpy"
version = "1.0.0"
description = "Build and solve quantum models in Python using Dirac notation."
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name="Ben Yuen", email="benyuen@hotmail.co.uk" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.dependencies]
numpy = ">=1.16.0"
scipy = ">=1.3.0"
